--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body{
 margin: 0;
 font - family: 'press Start 2p' , cursive;
 fontn- size: 2em;
-color: white;
+color: black;
 }
 button {
   outline: none;
@@ -25,7 +25,7 @@ button {
   visibility: hidden;
 }
 #end button {
-  background-color: red;
+  background-color: white;
   padding: 20px 50px 20px 50px
   font-family: inherit;
   font-size: inherit;
