--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ button {
 }
 #end button {
   background-color: white;
-  padding: 20px 50px 20px 50px
+  padding: 20px 50px 20px 50px;
   font-family: inherit;
   font-size: inherit;
 }
