--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ button {
   display: grid;
   grid-template-columns: 50px 50px 50px;
   grid-template-rows: auto auto;
-  grid-columns-gap: 10px;
+  grid-column-gap: 10px;
   grid-row-gap: 10px;
   margin-bottom: 20px;
 }
